modifikasi sedikit di bagian 2. Exploratory Data Analysis

--- a/tasks/src/yale_face_recognition.ipynb
+++ b/tasks/src/yale_face_recognition.ipynb
@@ -256,7 +256,7 @@
         "trusted": true,
         "id": "ZB8b_2NphG5M"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -282,13 +282,13 @@
       "metadata": {
         "trusted": true,
         "id": "N19YFhpChG5P",
-        "outputId": "77cbaf9f-b63e-407c-96ee-67c6298f9ccb",
+        "outputId": "8dc95478-33db-4be9-e1fd-3a30aff9281f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,15 +312,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "333e040d"
-      },
-      "source": [
-        "### **2.1. Deteksi Wajah dengan MTCNN**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "a299de03"
       },
       "source": [
@@ -332,6 +323,15 @@
         "*   `plt.show()`: Baris ini menampilkan gambar yang sudah disiapkan.\n",
         "\n",
         "Jadi, secara keseluruhan, kode ini memuat gambar grayscale, mengubahnya menjadi format \"seolah-olah\" RGB untuk kompatibilitas dengan alat berikutnya, mencetak dimensinya, dan kemudian menampilkannya."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "333e040d"
+      },
+      "source": [
+        "### **2.2. Deteksi Wajah dengan MTCNN**"
       ]
     },
     {
@@ -364,12 +364,12 @@
       "metadata": {
         "trusted": true,
         "id": "YgWZoOWBhG5R",
-        "outputId": "dafe09e5-29fb-45e0-b67a-840bff77ee00",
+        "outputId": "df37c9d3-7f82-4786-c0dc-ec87cc46b6ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 13
         }
       ]
     },
@@ -444,13 +444,13 @@
       "metadata": {
         "trusted": true,
         "id": "7jb17MOGhG5S",
-        "outputId": "9e039b09-1a0f-43f0-8e6e-5da64cb9e2f5",
+        "outputId": "e2d2b6f9-b8c2-4bf3-882f-a830a06af996",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 435
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,7 +484,7 @@
         "\n",
         "**Penjelasan Output:**\n",
         "\n",
-        "Output dari sel kode ini adalah tampilan gambar yang sudah Anda lihat sebelumnya, tetapi sekarang dengan tambahan kotak berwarna merah yang digambar di sekeliling setiap wajah yang berhasil dideteksi oleh algoritma MTCNN. Ini adalah visualisasi dari hasil deteksi wajah."
+        "Output dari sel kode ini adalah tampilan gambar yang sudah kita lihat sebelumnya, tetapi sekarang dengan tambahan kotak berwarna merah yang digambar di sekeliling setiap wajah yang berhasil dideteksi oleh algoritma MTCNN. Ini adalah visualisasi dari hasil deteksi wajah."
       ]
     },
     {
@@ -493,7 +493,7 @@
         "id": "702ae82f"
       },
       "source": [
-        "### **2.2. Ekstraksi Wajah**"
+        "### **2.3. Ekstraksi Wajah**"
       ]
     },
     {
@@ -549,23 +549,23 @@
       "metadata": {
         "trusted": true,
         "id": "bC-u8v5qhG5U",
-        "outputId": "3fb872f6-0fce-4703-eb5d-0208a43e486f",
+        "outputId": "43564b06-5e9b-4da0-8ba9-c684a45ed296",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7e4233604590>"
+              "<matplotlib.image.AxesImage at 0x7a915011d4f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
