--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMA7PwhQgjU05m79ou2CLa",
+      "authorship_tag": "ABX9TyP2nHEXK6cKj2CESSJQzBJB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/deep-learning-college-task/blob/main/MK_Deep_Learning_W5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/deep-learning-college-task/blob/main/tasks/src/MK_Deep_Learning_W5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VnMvLCJp_MhE",
-        "outputId": "8cd0d8f2-60fa-4981-bbdb-e82b85b51928"
+        "outputId": "4f57f75a-3ba2-4dd7-ba0c-93a7f8407df3"
       },
       "outputs": [
         {
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yKlImPjI_Uvh",
-        "outputId": "514a6b1b-1e6b-41be-de0d-f5390dc964ba"
+        "outputId": "abe5d0e0-2fbc-42f4-cd4f-e82be39706fb"
       },
       "execution_count": 2,
       "outputs": [
@@ -119,8 +119,79 @@
       "metadata": {
         "id": "Rd2mYHaE_Us0"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "22f1839a"
+      },
+      "source": [
+        "## **Section 0: Initial Setup (Pengaturan Awal)**\n",
+        "\n",
+        "**Penjelasan:** Bagian ini bertujuan untuk melakukan instalasi library Python yang mungkin belum ada di lingkungan Google Colab secara default, serta me-mount Google Drive agar notebook dapat mengakses dataset yang tersimpan di dalamnya."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "12f2ba06"
+      },
+      "source": [
+        "### **0.1. Install Libraries (Instalasi Library)**\n",
+        "\n",
+        "**Penjelasan:** Menginstal library tambahan yang mungkin diperlukan, seperti versi spesifik dari tensorflow atau library lain yang tidak termasuk dalam instalasi Colab dasar. Saat ini, library utama seperti TensorFlow dan Keras sudah terinstal, namun baris ini dapat ditambahkan jika ada kebutuhan library lain di masa depan."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "23020928"
+      },
+      "source": [
+        "# Tidak ada instalasi library tambahan yang spesifik diperlukan untuk langkah dasar ini,\n",
+        "# karena library utama seperti tensorflow sudah tersedia di Colab.\n",
+        "# Jika ada library lain yang dibutuhkan, tambahkan baris berikut:\n",
+        "# !pip install nama_library"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "075281b5"
+      },
+      "source": [
+        "### **0.2. Mount Google Drive (Menghubungkan Google Drive)**\n",
+        "\n",
+        "**Penjelasan:** Menghubungkan notebook ini dengan akun Google Drive Anda. Ini diperlukan agar notebook dapat membaca file dataset gambar yang telah Anda simpan di Google Drive. Setelah menjalankan sel ini, ikuti instruksi otorisasi yang muncul."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f58a1269",
+        "outputId": "5eab219c-b6f3-4815-be62-1ad9fcb482a2"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     }
   ]
 }
