--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2nHEXK6cKj2CESSJQzBJB",
+      "authorship_tag": "ABX9TyNHcfzvY5TGZblu3Uirpvqx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,6 +192,84 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4c13c338"
+      },
+      "source": [
+        "## **Section 1: Import Libraries and Environment Setup (Impor Library dan Pengaturan Lingkungan)**\n",
+        "\n",
+        "**Penjelasan:** Di sini kita akan mengimpor semua modul dan library yang dibutuhkan untuk keseluruhan proyek serta mendefinisikan variabel-variabel global seperti path direktori, ukuran gambar, dan parameter training."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9576c1c5"
+      },
+      "source": [
+        "### **1.1. Import Core Libraries (Impor Library Utama)**\n",
+        "\n",
+        "**Penjelasan:** Mengimpor library utama seperti tensorflow, keras, numpy, matplotlib.pyplot, os, dan seaborn yang akan digunakan sepanjang proyek ini."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b1ee94cf"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, GlobalAveragePooling2D\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b4adda93"
+      },
+      "source": [
+        "### **1.2. Define Configurations (Definisi Konfigurasi)**\n",
+        "\n",
+        "**Penjelasan:** Mendefinisikan variabel-variabel konfigurasi yang akan digunakan di seluruh notebook, termasuk path ke dataset, ukuran gambar yang akan digunakan, ukuran batch untuk training, jumlah epoch, dan jumlah kelas (mahasiswa)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "752e8757"
+      },
+      "source": [
+        "# Define Directory Paths (Definisi Path Direktori)\n",
+        "TRAIN_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Train'\n",
+        "TEST_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Test'\n",
+        "\n",
+        "# Define Image Parameters (Definisi Parameter Gambar)\n",
+        "IMG_HEIGHT = 150\n",
+        "IMG_WIDTH = 150\n",
+        "CHANNELS = 3 # RGB color images\n",
+        "\n",
+        "# Define Training Parameters (Definisi Parameter Pelatihan)\n",
+        "BATCH_SIZE = 32\n",
+        "EPOCHS = 100 # Will be controlled by Early Stopping\n",
+        "NUM_CLASSES = 57 # Total number of unique students"
+      ],
+      "execution_count": 6,
+      "outputs": []
     }
   ]
 }
