--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMM5VWpKZ++Y6QYT0lt+Xna",
+      "authorship_tag": "ABX9TyNqEiJyrNR7IpcTqLY3b9Tc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
         "id": "8b3b95f6"
       },
       "source": [
-        "### 2.1. Load Dataset Paths (Memuat Path Dataset)\n",
+        "### **2.1. Load Dataset Paths (Memuat Path Dataset)**\n",
         "\n",
         "**Penjelasan:** Kode untuk menghitung jumlah total gambar training dan testing."
       ]
@@ -336,7 +336,7 @@
         "id": "dc1a900b"
       },
       "source": [
-        "### 2.2. Inspect Class Distribution (Inspeksi Distribusi Kelas)\n",
+        "### **2.2. Inspect Class Distribution (Inspeksi Distribusi Kelas)**\n",
         "\n",
         "**Penjelasan:** Visualisasikan jumlah gambar per kelas untuk memastikan dataset seimbang."
       ]
@@ -392,7 +392,7 @@
         "id": "6f2edef2"
       },
       "source": [
-        "### 2.3. Visualize Sample Images (Visualisasi Sampel Gambar)\n",
+        "### **2.3. Visualize Sample Images (Visualisasi Sampel Gambar)**\n",
         "\n",
         "**Penjelasan:** Tampilkan beberapa gambar acak dari dataset training beserta labelnya untuk melihat variasi pose, ekspresi, dan pencahayaan yang ada."
       ]
