--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2LpQS+z/lNbAO1GqDVr50",
+      "authorship_tag": "ABX9TyO4FqCOCso1rdabdU1a863R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -583,7 +583,7 @@
         "id": "5154ed76"
       },
       "source": [
-        "### 3.4. Apply the Generators (Menerapkan Generator)\n",
+        "### **3.4. Apply the Generators (Menerapkan Generator)**\n",
         "\n",
         "**Penjelasan:** Gunakan `flow_from_directory()` untuk memuat gambar dari direktori menggunakan generator yang telah dibuat. Pastikan `target_size`, `batch_size`, dan `class_mode` diatur dengan benar. Karena struktur folder Anda tampaknya tidak memiliki subdirektori per kelas, kita perlu menggunakan `flow_from_dataframe` atau pendekatan lain jika `flow_from_directory` tidak bekerja dengan struktur file Anda.\n",
         "\n",
