--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOp6kDJf3L7HO90qdKKZE/2",
+      "authorship_tag": "ABX9TyPITPbthnhweYeYdJIrDnGx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1192,7 +1192,7 @@
         "id": "3a6b027d"
       },
       "source": [
-        "### 4.1. Load Pre-trained Base Model (Memuat Model Dasar Pra-latih)\n",
+        "### **4.1. Load Pre-trained Base Model (Memuat Model Dasar Pra-latih)**\n",
         "\n",
         "**Penjelasan:** Inisialisasi model dasar pra-latih seperti MobileNetV2 dengan bobot dari 'imagenet'. Kita akan menggunakan `include_top=False` untuk menghilangkan layer klasifikasi asli dan `input_shape` sesuai dengan ukuran gambar kita. Bobot dari base model akan dibekukan (`base_model.trainable = False`) di awal agar tidak ikut terlatih, memanfaatkan fitur yang sudah dipelajari dari dataset ImageNet."
       ]
@@ -1243,7 +1243,7 @@
         "id": "bab08d15"
       },
       "source": [
-        "### 4.2. Build the Full Model Architecture (Membangun Arsitektur Model Lengkap)\n",
+        "### **4.2. Build the Full Model Architecture (Membangun Arsitektur Model Lengkap)**\n",
         "\n",
         "**Penjelasan:** Tambahkan layer baru di atas base model untuk menyesuaikannya dengan tugas klasifikasi kita. Ini biasanya mencakup layer GlobalAveragePooling2D untuk mereduksi dimensi spasial, layer Dense dengan aktivasi ReLU untuk fitur non-linear, layer Dropout untuk regularisasi, dan layer Dense terakhir dengan aktivasi softmax untuk output klasifikasi ke **NUM_CLASSES** kelas."
       ]
@@ -1275,7 +1275,7 @@
         "id": "65c203e5"
       },
       "source": [
-        "### 4.3. Compile the Model (Kompilasi Model)\n",
+        "### **4.3. Compile the Model (Kompilasi Model)**\n",
         "\n",
         "**Penjelasan:** Konfigurasi model untuk pelatihan. Kita akan menggunakan optimizer Adam, fungsi loss `categorical_crossentropy` yang sesuai untuk klasifikasi multi-kelas, dan metrik `accuracy` untuk memantau performa selama pelatihan."
       ]
@@ -1301,7 +1301,7 @@
         "id": "76981144"
       },
       "source": [
-        "### 4.4. Display Model Summary (Tampilkan Rangkuman Model)\n",
+        "### **4.4. Display Model Summary (Tampilkan Rangkuman Model)**\n",
         "\n",
         "**Penjelasan:** Cetak rangkuman model untuk melihat arsitektur lengkap, jumlah parameter di setiap layer, dan total parameter yang dapat dilatih dan yang tidak dapat dilatih."
       ]
