--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPITPbthnhweYeYdJIrDnGx",
+      "authorship_tag": "ABX9TyNeFaIlelxmWVElQLflqwqr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1419,6 +1419,91 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9a1a9634"
+      },
+      "source": [
+        "## **Section 5: Model Training (Pelatihan Model)**\n",
+        "\n",
+        "**Penjelasan:** Sekarang kita akan melatih model yang telah dibuat menggunakan data training. Kita akan menggunakan callbacks untuk menyimpan model terbaik secara otomatis, menghentikan pelatihan jika tidak ada peningkatan, dan menyesuaikan learning rate."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4724193e"
+      },
+      "source": [
+        "### **5.1. Define Callbacks (Definisi Callbacks)**\n",
+        "\n",
+        "**Penjelasan:** ModelCheckpoint untuk menyimpan model dengan `val_accuracy` terbaik, EarlyStopping untuk menghentikan pelatihan jika `val_loss` tidak membaik setelah beberapa epoch (patience), dan ReduceLROnPlateau untuk mengurangi learning rate jika `val_loss` stagnan."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "812d7257"
+      },
+      "source": [
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
+        "\n",
+        "# Define ModelCheckpoint callback\n",
+        "checkpoint_filepath = '/tmp/checkpoint/best_model.weights.h5'\n",
+        "model_checkpoint_callback = ModelCheckpoint(\n",
+        "    filepath=checkpoint_filepath,\n",
+        "    save_weights_only=True, # Only save weights\n",
+        "    monitor='val_accuracy', # Monitor validation accuracy\n",
+        "    mode='max',             # Save when validation accuracy is maximum\n",
+        "    save_best_only=True)    # Only save the best model\n",
+        "\n",
+        "# Define EarlyStopping callback\n",
+        "early_stopping_callback = EarlyStopping(\n",
+        "    monitor='val_loss', # Monitor validation loss\n",
+        "    patience=10,        # Stop if no improvement for 10 epochs\n",
+        "    restore_best_weights=True) # Restore model weights from the epoch with the best value\n",
+        "\n",
+        "# Define ReduceLROnPlateau callback\n",
+        "reduce_lr_callback = ReduceLROnPlateau(\n",
+        "    monitor='val_loss', # Monitor validation loss\n",
+        "    factor=0.1,         # Reduce learning rate by a factor of 0.1\n",
+        "    patience=5,         # Reduce after 5 epochs with no improvement\n",
+        "    min_lr=0.0001)      # Minimum learning rate"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "006a6b99"
+      },
+      "source": [
+        "### 5.2. Start Training (Mulai Pelatihan)\n",
+        "\n",
+        "**Penjelasan:** Panggil `model.fit()` dengan `train_generator` dan `validation_data=test_generator`. Simpan riwayat pelatihan ke dalam variabel `history` untuk visualisasi nanti."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0a0e21bc"
+      },
+      "source": [
+        "# Start training the model\n",
+        "history = model.fit(\n",
+        "    train_generator,\n",
+        "    steps_per_epoch=train_generator.samples // BATCH_SIZE,\n",
+        "    epochs=EPOCHS,\n",
+        "    validation_data=test_generator,\n",
+        "    validation_steps=test_generator.samples // BATCH_SIZE,\n",
+        "    callbacks=[model_checkpoint_callback, early_stopping_callback, reduce_lr_callback]\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
