--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMqDHpPgRa1M0xzaCCuwCzK",
+      "authorship_tag": "ABX9TyOm3i9z2j4M5I0F4BFJLVNM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1626,7 +1626,11 @@
             "Epoch 38/100\n",
             "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.0938 - loss: 4.3703 - val_accuracy: 1.0000 - val_loss: 0.1067 - learning_rate: 1.0000e-04\n",
             "Epoch 39/100\n",
-            "\u001b[1m44/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━\u001b[0m \u001b[1m14s\u001b[0m 2s/step - accuracy: 0.0841 - loss: 4.5397"
+            "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m94s\u001b[0m 2s/step - accuracy: 0.0860 - loss: 4.5346 - val_accuracy: 1.0000 - val_loss: 0.1002 - learning_rate: 1.0000e-04\n",
+            "Epoch 40/100\n",
+            "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.0312 - loss: 4.9147 - val_accuracy: 1.0000 - val_loss: 0.1013 - learning_rate: 1.0000e-04\n",
+            "Epoch 41/100\n",
+            "\u001b[1m27/52\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m43s\u001b[0m 2s/step - accuracy: 0.1059 - loss: 4.4843"
           ]
         }
       ]
@@ -1727,7 +1731,7 @@
         "id": "f17c61c6"
       },
       "source": [
-        "### 6.3. Generate Classification Report and Confusion Matrix (Buat Laporan Klasifikasi dan Matriks Kebingungan)\n",
+        "### **6.3. Generate Classification Report and Confusion Matrix (Buat Laporan Klasifikasi dan Matriks Kebingungan)**\n",
         "\n",
         "**Penjelasan:** Dapatkan prediksi untuk seluruh data tes, gunakan `classification_report` untuk melihat metrik per kelas (presisi, recall, f1-score), dan visualisasikan `confusion_matrix` untuk melihat performa per kelas secara detail."
       ]
@@ -1787,7 +1791,7 @@
         "id": "712b1b0c"
       },
       "source": [
-        "## Section 7: Fine-Tuning (Opsional, untuk Akurasi Maksimal)\n",
+        "## **Section 7: Fine-Tuning (Opsional, untuk Akurasi Maksimal)**\n",
         "\n",
         "**Penjelasan:** Jika performa belum maksimal, kita bisa mencoba fine-tuning. Ini melibatkan \"membuka\" beberapa layer terakhir dari base model pra-latih dan melatihnya kembali dengan learning rate yang sangat kecil."
       ]
@@ -1798,7 +1802,7 @@
         "id": "42b2ad8e"
       },
       "source": [
-        "### 7.1. Unfreeze Layers (Membuka Lapisan)\n",
+        "### **7.1. Unfreeze Layers (Membuka Lapisan)**\n",
         "\n",
         "**Penjelasan:** Set `base_model.trainable = True`. Tentukan berapa banyak layer dari atas yang ingin di-unfreeze. Membuka terlalu banyak layer bisa menyebabkan overfitting, jadi mulailah dengan membuka beberapa layer terakhir."
       ]
