--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOm3i9z2j4M5I0F4BFJLVNM",
+      "authorship_tag": "ABX9TyO4pH3DVdXVJoPZx6PQ3/2t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1630,7 +1630,11 @@
             "Epoch 40/100\n",
             "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step - accuracy: 0.0312 - loss: 4.9147 - val_accuracy: 1.0000 - val_loss: 0.1013 - learning_rate: 1.0000e-04\n",
             "Epoch 41/100\n",
-            "\u001b[1m27/52\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m43s\u001b[0m 2s/step - accuracy: 0.1059 - loss: 4.4843"
+            "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 2s/step - accuracy: 0.0993 - loss: 4.5174 - val_accuracy: 1.0000 - val_loss: 0.1023 - learning_rate: 1.0000e-04\n",
+            "Epoch 42/100\n",
+            "\u001b[1m52/52\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.0625 - loss: 4.9798 - val_accuracy: 1.0000 - val_loss: 0.1028 - learning_rate: 1.0000e-04\n",
+            "Epoch 43/100\n",
+            "\u001b[1m 8/52\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:21\u001b[0m 2s/step - accuracy: 0.0880 - loss: 4.5809"
           ]
         }
       ]
@@ -1844,7 +1848,7 @@
         "id": "b0869f1a"
       },
       "source": [
-        "### 7.2. Re-compile with a Low Learning Rate (Kompilasi Ulang dengan Learning Rate Rendah)\n",
+        "### **7.2. Re-compile with a Low Learning Rate (Kompilasi Ulang dengan Learning Rate Rendah)**\n",
         "\n",
         "**Penjelasan:** Kompilasi ulang model dengan optimizer Adam dan `learning_rate` yang jauh lebih kecil (misal, `1e-5`) untuk fine-tuning. Learning rate yang kecil penting untuk menghindari merusak bobot pra-latih yang sudah ada."
       ]
@@ -1870,7 +1874,7 @@
         "id": "d0b917b3"
       },
       "source": [
-        "### 7.3. Continue Training (Lanjutkan Pelatihan)\n",
+        "### **7.3. Continue Training (Lanjutkan Pelatihan)**\n",
         "\n",
         "**Penjelasan:** Latih kembali model untuk beberapa epoch tambahan dengan set learning rate yang baru. Gunakan callbacks yang sama atau sesuaikan jika perlu."
       ]
@@ -1917,7 +1921,7 @@
         "id": "d09bfde4"
       },
       "source": [
-        "### 7.4. Final Evaluation (Evaluasi Akhir)\n",
+        "### **7.4. Final Evaluation (Evaluasi Akhir)**\n",
         "\n",
         "**Penjelasan:** Ulangi langkah evaluasi dari Section 6 untuk melihat peningkatan performa setelah fine-tuning."
       ]
