Penambahan link dataset dari Google Drive

--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOuGVtCpGMEFQYjiLig714v",
+      "authorship_tag": "ABX9TyNGf6s4eT29x5EX4XZYC1ae",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
         "# Jika ada library lain yang dibutuhkan, tambahkan baris berikut:\n",
         "# !pip install nama_library"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "import seaborn as sns\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,6 +155,15 @@
         "\n",
         "**Penjelasan:** Mendefinisikan variabel-variabel konfigurasi yang akan digunakan di seluruh notebook, termasuk path ke dataset, ukuran gambar yang akan digunakan, ukuran batch untuk training, jumlah epoch, dan jumlah kelas (mahasiswa)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Link Dataset Google Drive: https://drive.google.com/drive/folders/1S5mRxYOfTPAmfqqFFLfbV_D5eWj5J9ox?usp=sharing"
+      ],
+      "metadata": {
+        "id": "sa181Rqnk7PG"
+      }
     },
     {
       "cell_type": "code",
@@ -176,7 +185,7 @@
         "EPOCHS = 100 # Will be controlled by Early Stopping\n",
         "NUM_CLASSES = 57 # Total number of unique students"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +232,7 @@
         "print(f\"\\nJumlah kelas (mahasiswa) terdeteksi: {len(class_names)}\")\n",
         "print(f\"Nama kelas (mahasiswa) contoh: {class_names[:10]}...\") # Display first 10 class names"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +304,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,7 +340,7 @@
         "else:\n",
         "    print(\"\\nTidak ada data kelas yang ditemukan untuk diperiksa.\")"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +409,7 @@
         "    plt.tight_layout()\n",
         "    plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -444,7 +453,7 @@
       "source": [
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +485,7 @@
         "    fill_mode='nearest'       # Strategi mengisi piksel baru setelah transformasi\n",
         ")"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -498,7 +507,7 @@
       "source": [
         "test_datagen = ImageDataGenerator(rescale=1./255) # Hanya normalisasi"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +591,7 @@
         "print(f\"\\nJumlah kelas (mahasiswa) terdeteksi oleh generator (berdasarkan data training): {NUM_CLASSES}\")\n",
         "print(f\"Indeks kelas (NIM): {class_indices}\")"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,7 +1281,7 @@
         "else:\n",
         "    print(\"\\nTidak ada data kelas (NIM) yang ditemukan untuk diperiksa di Data Test.\")"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2641,7 +2650,7 @@
         "# Freeze the base model's weights\n",
         "base_model.trainable = False"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2679,7 +2688,7 @@
         "    Dense(NUM_CLASSES, activation='softmax')\n",
         "])"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2703,7 +2712,7 @@
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2730,7 +2739,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2881,7 +2890,7 @@
         "    patience=5,         # Reduce after 5 epochs with no improvement\n",
         "    min_lr=0.0001)      # Minimum learning rate"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3050,7 +3059,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
