refactor: Increase number of displayed sample images
Modify the visualization code to display 20 random sample images
from the training dataset instead of 9 for better inspection.

--- a/tasks/src/MK_Deep_Learning_W5.ipynb
+++ b/tasks/src/MK_Deep_Learning_W5.ipynb
@@ -3135,7 +3135,23 @@
           "name": "stdout",
           "text": [
             "Epoch 1/50\n",
-            "\u001b[1m 9/53\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:09\u001b[0m 2s/step - accuracy: 0.0355 - loss: 5.3020"
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m143s\u001b[0m 2s/step - accuracy: 0.0378 - loss: 4.4584 - val_accuracy: 0.3053 - val_loss: 3.2135 - learning_rate: 0.0010\n",
+            "Epoch 2/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m110s\u001b[0m 2s/step - accuracy: 0.1717 - loss: 3.1612 - val_accuracy: 0.6947 - val_loss: 1.5872 - learning_rate: 0.0010\n",
+            "Epoch 3/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m109s\u001b[0m 2s/step - accuracy: 0.4250 - loss: 2.0684 - val_accuracy: 0.8438 - val_loss: 0.7571 - learning_rate: 0.0010\n",
+            "Epoch 4/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m105s\u001b[0m 2s/step - accuracy: 0.5484 - loss: 1.5145 - val_accuracy: 0.9111 - val_loss: 0.4704 - learning_rate: 0.0010\n",
+            "Epoch 5/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m107s\u001b[0m 2s/step - accuracy: 0.6257 - loss: 1.2700 - val_accuracy: 0.9327 - val_loss: 0.3172 - learning_rate: 0.0010\n",
+            "Epoch 6/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m105s\u001b[0m 2s/step - accuracy: 0.7366 - loss: 0.9212 - val_accuracy: 0.9375 - val_loss: 0.2568 - learning_rate: 0.0010\n",
+            "Epoch 7/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m106s\u001b[0m 2s/step - accuracy: 0.7482 - loss: 0.7896 - val_accuracy: 0.9591 - val_loss: 0.1749 - learning_rate: 0.0010\n",
+            "Epoch 8/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m107s\u001b[0m 2s/step - accuracy: 0.7880 - loss: 0.6952 - val_accuracy: 0.9663 - val_loss: 0.1601 - learning_rate: 0.0010\n",
+            "Epoch 9/50\n",
+            "\u001b[1m21/53\u001b[0m \u001b[32m━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.8179 - loss: 0.5827"
           ]
         }
       ]
