--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfKRV586I8U9ZKW0zqtJJY",
+      "authorship_tag": "ABX9TyP5m1dTR1fBUG4RXuXY62At",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +23,89 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/deep-learning-college-task/blob/main/Tugas_CNN_Scratch_ipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/deep-learning-college-task/blob/main/tasks/week_5_tasks/Task_CNN_Scratch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "hehe"
-      ],
       "metadata": {
-        "id": "YtegbJ8Iiz10"
-      }
+        "id": "5626ae91"
+      },
+      "source": [
+        "# **Section 0: Initial Setup (Pengaturan Awal)**\n",
+        "\n",
+        "Bagian ini untuk melakukan instalasi library penting yang mungkin belum ada di Colab dan menghubungkan Google Drive."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "430e8d6e"
+      },
+      "source": [
+        "## **0.1. Install Libraries (Instalasi Library)**\n",
+        "\n",
+        "Menginstal library `mtcnn` yang akan digunakan untuk deteksi wajah."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bf25ad7a",
+        "outputId": "f4aa1e10-c04b-4f61-d2c7-a9bbef2c09e3"
+      },
+      "source": [
+        "!pip install opencv-python"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.12/dist-packages (4.12.0.88)\n",
+            "Requirement already satisfied: numpy<2.3.0,>=2 in /usr/local/lib/python3.12/dist-packages (from opencv-python) (2.0.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ca0d611"
+      },
+      "source": [
+        "## **0.2. Mount Google Drive (Menghubungkan Google Drive)**\n",
+        "\n",
+        "Menghubungkan notebook dengan Google Drive agar dapat mengakses dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bce83f40",
+        "outputId": "52356c5a-f439-4923-8b9d-2ddf3d2b54c5"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
