--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5m1dTR1fBUG4RXuXY62At",
+      "authorship_tag": "ABX9TyOLEqOFb2F5xg3dvJc+/mD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,13 +108,176 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "yAQNbTHPPHpj"
+        "id": "4c13c338"
       },
-      "outputs": [],
-      "source": []
+      "source": [
+        "## **Section 1: Import Libraries and Environment Setup (Impor Library dan Pengaturan Lingkungan)**\n",
+        "\n",
+        "**Penjelasan:** Di sini kita akan mengimpor semua modul dan library yang dibutuhkan untuk keseluruhan proyek serta mendefinisikan variabel-variabel global seperti path direktori, ukuran gambar, dan parameter training."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9576c1c5"
+      },
+      "source": [
+        "### **1.1. Import Core Libraries (Impor Library Utama)**\n",
+        "\n",
+        "**Penjelasan:** Mengimpor library utama seperti tensorflow, keras, numpy, matplotlib.pyplot, os, dan seaborn yang akan digunakan sepanjang proyek ini."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b1ee94cf"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, GlobalAveragePooling2D\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.applications import MobileNetV2\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import zipfile\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b4adda93"
+      },
+      "source": [
+        "### **1.2. Define Configurations (Definisi Konfigurasi)**\n",
+        "\n",
+        "**Penjelasan:** Mendefinisikan variabel-variabel konfigurasi yang akan digunakan di seluruh notebook, termasuk path ke dataset, ukuran gambar yang akan digunakan, ukuran batch untuk training, jumlah epoch, dan jumlah kelas (mahasiswa)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Link Dataset Google Drive: https://drive.google.com/drive/folders/1S5mRxYOfTPAmfqqFFLfbV_D5eWj5J9ox?usp=sharing"
+      ],
+      "metadata": {
+        "id": "sa181Rqnk7PG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "752e8757"
+      },
+      "source": [
+        "# Define Directory Paths (Definisi Path Direktori)\n",
+        "TRAIN_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Train'\n",
+        "TEST_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Test'\n",
+        "\n",
+        "# Define Image Parameters (Definisi Parameter Gambar)\n",
+        "IMG_HEIGHT = 150\n",
+        "IMG_WIDTH = 150\n",
+        "CHANNELS = 3 # RGB color images\n",
+        "\n",
+        "# Define Training Parameters (Definisi Parameter Pelatihan)\n",
+        "BATCH_SIZE = 32\n",
+        "EPOCHS = 50 # Will be controlled by Early Stopping\n",
+        "NUM_CLASSES = 57 # Total number of unique students"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2817c9e2"
+      },
+      "source": [
+        "### **1.3. Extract Dataset (Ekstrak Dataset)**\n",
+        "\n",
+        "**Penjelasan:** Mengekstrak file dataset dari Google Drive ke lingkungan Colab agar dapat diakses sebagai direktori biasa."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c1266c0a",
+        "outputId": "9ca9d4c1-23fa-4eef-f7fc-077c8e7ac92c"
+      },
+      "source": [
+        "# Define the path to the zip file in Google Drive\n",
+        "zip_path = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip'\n",
+        "extract_path = '/content/dataset' # Directory to extract the dataset\n",
+        "\n",
+        "# Create the extraction directory if it doesn't exist\n",
+        "os.makedirs(extract_path, exist_ok=True)\n",
+        "\n",
+        "# Extract the zip file\n",
+        "print(f\"Extracting {zip_path} to {extract_path}...\")\n",
+        "try:\n",
+        "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+        "        zip_ref.extractall(extract_path)\n",
+        "    print(\"Extraction complete.\")\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"Error: Zip file not found at {zip_path}\")\n",
+        "except zipfile.BadZipFile:\n",
+        "    print(f\"Error: Could not open or read zip file at {zip_path}. It might be corrupted.\")\n",
+        "except Exception as e:\n",
+        "    print(f\"An error occurred during extraction: {e}\")\n",
+        "\n",
+        "# Update TRAIN_DIR and TEST_DIR to point to the extracted directories\n",
+        "# Based on the previous output, the extracted content is in a subfolder\n",
+        "extracted_subfolder = os.path.join(extract_path, 'Dataset Sistem Presensi Wajah V1.0')\n",
+        "TRAIN_DIR = os.path.join(extracted_subfolder, 'Data Train')\n",
+        "TEST_DIR = os.path.join(extracted_subfolder, 'Data Test')\n",
+        "\n",
+        "\n",
+        "print(f\"Updated TRAIN_DIR: {TRAIN_DIR}\")\n",
+        "print(f\"Updated TEST_DIR: {TEST_DIR}\")\n",
+        "\n",
+        "# Verify that the directories exist after extraction\n",
+        "if os.path.exists(TRAIN_DIR):\n",
+        "    print(f\"TRAIN_DIR exists: {TRAIN_DIR}\")\n",
+        "else:\n",
+        "    print(f\"Error: TRAIN_DIR not found after extraction at {TRAIN_DIR}\")\n",
+        "\n",
+        "if os.path.exists(TEST_DIR):\n",
+        "    print(f\"TEST_DIR exists: {TEST_DIR}\")\n",
+        "else:\n",
+        "    print(f\"Error: TEST_DIR not found after extraction at {TEST_DIR}\")\n",
+        "\n",
+        "# Now it's safe to list contents if needed for verification after extraction\n",
+        "print(f\"Contents of {extract_path} after extraction: {os.listdir(extract_path)}\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting /content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip to /content/dataset...\n",
+            "Extraction complete.\n",
+            "Updated TRAIN_DIR: /content/dataset/Dataset Sistem Presensi Wajah V1.0/Data Train\n",
+            "Updated TEST_DIR: /content/dataset/Dataset Sistem Presensi Wajah V1.0/Data Test\n",
+            "TRAIN_DIR exists: /content/dataset/Dataset Sistem Presensi Wajah V1.0/Data Train\n",
+            "TEST_DIR exists: /content/dataset/Dataset Sistem Presensi Wajah V1.0/Data Test\n",
+            "Contents of /content/dataset after extraction: ['Dataset Sistem Presensi Wajah V1.0']\n"
+          ]
+        }
+      ]
     }
   ]
 }
