--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLEqOFb2F5xg3dvJc+/mD5",
+      "authorship_tag": "ABX9TyMOuO19+a2YhcYnv9XKQFwI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,19 +55,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bf25ad7a",
-        "outputId": "f4aa1e10-c04b-4f61-d2c7-a9bbef2c09e3"
+        "outputId": "0c5e9805-c9d1-4498-dfe0-50e7b80ac314"
       },
       "source": [
-        "!pip install opencv-python"
+        "!pip install opencv-python\n",
+        "!pip install mtcnn"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.12/dist-packages (4.12.0.88)\n",
-            "Requirement already satisfied: numpy<2.3.0,>=2 in /usr/local/lib/python3.12/dist-packages (from opencv-python) (2.0.2)\n"
+            "Requirement already satisfied: numpy<2.3.0,>=2 in /usr/local/lib/python3.12/dist-packages (from opencv-python) (2.0.2)\n",
+            "Collecting mtcnn\n",
+            "  Downloading mtcnn-1.0.0-py3-none-any.whl.metadata (5.8 kB)\n",
+            "Requirement already satisfied: joblib>=1.4.2 in /usr/local/lib/python3.12/dist-packages (from mtcnn) (1.5.2)\n",
+            "Collecting lz4>=4.3.3 (from mtcnn)\n",
+            "  Downloading lz4-4.4.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.8 kB)\n",
+            "Downloading mtcnn-1.0.0-py3-none-any.whl (1.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m66.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading lz4-4.4.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m75.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: lz4, mtcnn\n",
+            "Successfully installed lz4-4.4.4 mtcnn-1.0.0\n"
           ]
         }
       ]
@@ -139,19 +151,19 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, GlobalAveragePooling2D\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, InputLayer, BatchNormalization\n",
         "from tensorflow.keras.optimizers import Adam\n",
-        "from tensorflow.keras.applications import MobileNetV2\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import os\n",
         "import zipfile\n",
-        "import seaborn as sns\n",
-        "from sklearn.metrics import classification_report, confusion_matrix"
+        "import cv2\n",
+        "import glob\n",
+        "import shutil\n",
+        "from mtcnn.mtcnn import MTCNN"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -181,20 +193,21 @@
       },
       "source": [
         "# Define Directory Paths (Definisi Path Direktori)\n",
-        "TRAIN_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Train'\n",
-        "TEST_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Test'\n",
+        "ZIP_PATH = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip' # Path to the raw zip file in Google Drive\n",
+        "RAW_DATA_PATH = '/content/raw_dataset' # Directory to extract the raw dataset\n",
+        "PROCESSED_PATH = '/content/processed_dataset' # Directory to save the processed (face-detected) dataset\n",
         "\n",
         "# Define Image Parameters (Definisi Parameter Gambar)\n",
-        "IMG_HEIGHT = 150\n",
-        "IMG_WIDTH = 150\n",
+        "IMG_HEIGHT = 128 # Smaller size for custom CNN from scratch\n",
+        "IMG_WIDTH = 128\n",
         "CHANNELS = 3 # RGB color images\n",
         "\n",
         "# Define Training Parameters (Definisi Parameter Pelatihan)\n",
         "BATCH_SIZE = 32\n",
         "EPOCHS = 50 # Will be controlled by Early Stopping\n",
-        "NUM_CLASSES = 57 # Total number of unique students"
+        "# NUM_CLASSES will be determined later by the data generator"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
